--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "锦囊"
-description              : "实验室指南"
+description              : "旨在为实验室成员提供一个集中、便捷的资源平台，帮助同学们快速获取与实验室工作相关的各种信息和操作指南"
 repository               : "RayeRen/acad-homepage.github.io"
 google_scholar_stats_use_cdn : false
 
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "机器智能实验室"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "广州，中国"
+  bio              : 
   location         : 
   employer         :
   pubmed           : 
